--- a/devops.html
+++ b/devops.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/ringcentral/job/oCXrbfwV'>RingCentral Careers - DevOps</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://openvpninc.recruitee.com/o/lead-devops-engineer-3'>
       Lead DevOps Engineer - OpenVPN Inc.
     </a></h5> 
@@ -58,11 +62,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MJHLifeSciences/743999698382238-devops-engineer'>MJH Life Sciences DevOps Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/MJHLifeSciences/743999698382238-devops-engineer'>MJH Life Sciences DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://runtastic.recruiterbox.com/jobs/fk03i5k/'>
+<h5><a href='https://runtastic.recruiterbox.com/jobs/fk03i5k/'>
     DevOps Engineer at Runtastic GmbH
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -78,11 +82,11 @@
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698471626-junior-devops-engineer'>SmartRecruiters Inc Junior DevOps Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698471626-junior-devops-engineer'>SmartRecruiters Inc Junior DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698472634-devops-database-engineer'>SmartRecruiters Inc Devops Database Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698472634-devops-database-engineer'>SmartRecruiters Inc Devops Database Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -122,7 +126,7 @@
 <p><span class="badge badge-light">Calgary, ABCanada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o1S4afwR&__jvst=Employee+Referral&__jvsd=sfrNBfwO&__jvsc=Twitter&bid=n1yaoMwo'>ServiceNow Careers - Technical Lead ? DevOps</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o1S4afwR&__jvst=Employee+Referral&__jvsd=sfrNBfwO&__jvsc=Twitter&bid=n1yaoMwo'>ServiceNow Careers - Technical Lead ? DevOps</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -146,7 +150,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/dae/jobs/devops-engineer-mid-dXB4cG908r6Bk3aKiznY58'>DevOps Engineer - Mid #0585 job at Stratus Solutions in Fulton, MD, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/dae/jobs/devops-engineer-mid-dXB4cG908r6Bk3aKiznY58'>DevOps Engineer - Mid #0585 job at Stratus Solutions in Fulton, MD, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Fulton, MDFulton, MD</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -186,7 +190,7 @@
 <p><span class="badge badge-light">Leeds, United Kingdom</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q0KaVfwz&k=Job&j=o9Qrbfwl&__jvst=Employee+Referral+&__jvsd=s2Lp2iw1&__jvsc=Twitter&bid=nmCUnMww'>Litera Microsystems Careers - DevOps Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q0KaVfwz&k=Job&j=o9Qrbfwl&__jvst=Employee+Referral+&__jvsd=s2Lp2iw1&__jvsc=Twitter&bid=nmCUnMww'>Litera Microsystems Careers - DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -262,7 +266,7 @@ such as DevOps, SRE or Operations Engineer roles. Knowledge of Linux, nginx,
 <p><span class="badge badge-light">San Mateo, CA  San Mateo, CA  San Mateo, California</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qdFaVfwH&k=Job&j=o4rfafwE&__jvst=Referral&__jvsd=s6lxKhwu&__jvsc=Twitter&bid=nNeZmMwD'>Rackspace Careers - DevOps Consultant</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qdFaVfwH&k=Job&j=o4rfafwE&__jvst=Referral&__jvsd=s6lxKhwu&__jvsc=Twitter&bid=nNeZmMwD'>Rackspace Careers - DevOps Consultant</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -339,11 +343,11 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/paloaltonetworks/job/oPb1afwV'>Palo Alto Networks Careers - DevOps SRE Engineer (Information Security)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/paloaltonetworks/job/oPb1afwV'>Palo Alto Networks Careers - DevOps SRE Engineer (Information Security)</a></h5> 
 <p><span class="badge badge-light">Palo Alto Palo Alto Tel Aviv, Israel  Palo Alto</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/paloaltonetworks/job/oPb1afwV'>Palo Alto Networks Careers - DevOps SRE Engineer (Information Security)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/paloaltonetworks/job/oPb1afwV'>Palo Alto Networks Careers - DevOps SRE Engineer (Information Security)</a></h5> 
 <p><span class="badge badge-light">Palo Alto Palo Alto Tel Aviv, Israel  Palo Alto</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -383,7 +387,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light">Raanana, Israel</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/indigo/jobs/1931884'>Job Application for Project Manager, DevOps at Indigo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/indigo/jobs/1931884'>Job Application for Project Manager, DevOps at Indigo</a></h5> 
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -453,10 +457,6 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/onepoint/743999698033097-devops-engineer'>onepoint DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/j2-global/job/oHiobfwi'>J2 Global Careers - DevOPs Systems Administrator</a></h5> 
-<p><span class="badge badge-light">Galway</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
 
