--- a/frontend.html
+++ b/frontend.html
@@ -38,8 +38,16 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.smartrecruiters.com/lmgroup/743999698498944-senior-front-end-engineer'>lm group Senior Front end Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.jobvite.com/ringcentral/job/oDXrbfwW'>RingCentral Careers - Front-end Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/revzilla/002be844-5c04-4697-880f-c74489707aa9'>RevZilla - Front End Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/lmgroup/743999698498944-senior-front-end-engineer'>lm group Senior Front end Engineer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Chiasso, Switzerland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/callibrity/jobs/4499922002'>Job Application for Software Developer (Front-End / UI) at Callibrity</a></h5> 
@@ -56,7 +64,7 @@
 <p><span class="badge badge-light">Prague</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/gitlab/jobs/4235498002'>Job Application for Frontend Engineer (Monitor Team) at GitLab</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/gitlab/jobs/4235498002'>Job Application for Frontend Engineer (Monitor Team) at GitLab</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -136,7 +144,7 @@
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/lmgroup/743999698465571-senior-front-end-engineer'>lm group Senior Front End Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/lmgroup/743999698465571-senior-front-end-engineer'>lm group Senior Front End Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Madrid, Spain</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -180,11 +188,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://dedeleads.com/job/stilman-advanced-strategies-looking-for-remote-front-end-developer-angular/'>STILMAN Advanced Strategies looking for Remote Front End Developer, Angular</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dedeleads.com/job/stilman-advanced-strategies-looking-for-remote-front-end-developer-angular/'>STILMAN Advanced Strategies looking for Remote Front End Developer, Angular</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://dedeleads.com/job/livearea-looking-for-sr-front-end-developer-sfcc/'>LiveArea looking for Sr. Front End Developer (SFCC)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dedeleads.com/job/livearea-looking-for-sr-front-end-developer-sfcc/'>LiveArea looking for Sr. Front End Developer (SFCC)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -196,7 +204,7 @@
 <p><span class="badge badge-light">D?sseldorf, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://watermelon.recruitee.com/o/mediorsenior-frontend-developer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://watermelon.recruitee.com/o/mediorsenior-frontend-developer'>
       Medior/Senior Frontend Developer - Watermelon
     </a></h5> 
 <p><span class="badge badge-light">Utrecht, Netherlands</span></p>
@@ -298,7 +306,7 @@
 <p><span class="badge badge-light">Tennessee</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/medallia/b57a8157-7dca-45d6-8d47-d4faa27537c6'>Medallia - Senior Software Engineer, Frontend</a></h5> 
+<h5><a href='https://jobs.lever.co/medallia/b57a8157-7dca-45d6-8d47-d4faa27537c6'>Medallia - Senior Software Engineer, Frontend</a></h5> 
 <p><span class="badge badge-light">Carlsbad, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -321,7 +329,7 @@ acceleration platform that creates high performance sales teams with?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999698424753-front-end-developer'>Bey Front End Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698424753-front-end-developer'>Bey Front End Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -350,7 +358,7 @@ Enterprise Software team in building highly interactive, intuitive and responsiv
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/94A1E34B4B'>Senior Software Engineer- Front End - Bevi</a></h5> 
+<h5><a href='https://www.workable.com/j/94A1E34B4B'>Senior Software Engineer- Front End - Bevi</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 18, 2019 ... As a Senior Software Engineer- Front End, your guidance and input drive 
 architecture and functionality decisions. Whether you prefer providing mentorship 
@@ -415,7 +423,7 @@ freedom to thrive anywhere. We are building a banking service that allows you to
 <p><span class="badge badge-light">Scottsdale, Arizona United States  North America</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/pendo/jobs/4498102002'>Job Application for Sr. Front End Engineer at Pendo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/pendo/jobs/4498102002'>Job Application for Sr. Front End Engineer at Pendo</a></h5> 
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -431,11 +439,11 @@ freedom to thrive anywhere. We are building a banking service that allows you to
 <p><span class="badge badge-light">Barcelona  Barcelona</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://vodastra.applytojob.com/apply/QTgaaKI0cl/Frontend-Developer'>Front-end Developer - Vodastra - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://vodastra.applytojob.com/apply/QTgaaKI0cl/Frontend-Developer'>Front-end Developer - Vodastra - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://vodastra.applytojob.com/apply/tLKc3hkCgB/Frontend-Developer'>Front-end Developer - Vodastra - Career Page</a></h5> 
+<h5><a href='http://vodastra.applytojob.com/apply/tLKc3hkCgB/Frontend-Developer'>Front-end Developer - Vodastra - Career Page</a></h5> 
 <p><span class="badge badge-light">Charlotte, NC  Charlotte</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -455,19 +463,11 @@ freedom to thrive anywhere. We are building a banking service that allows you to
 <p><span class="badge badge-light">Santa Clara, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/soundhoundinc/jobs/4499059002'>Job Application for Senior Front-end Engineer at SoundHound Inc.</a></h5> 
+<h5><a href='https://boards.greenhouse.io/soundhoundinc/jobs/4499059002'>Job Application for Senior Front-end Engineer at SoundHound Inc.</a></h5> 
 <p><span class="badge badge-light">Boulder</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jkweb.join.com/jobs/460224-web-entwickler-frontend-60-100'>Job @ JKweb (Z?rich): Web Entwickler Frontend 60 -... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/DHbmxDnxN7/Front-End-Engineer'>Front End Engineer - IntelliPro Group Inc. - Career Page</a></h5> 
-<p><span class="badge badge-light">Mountain View, CA</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
